tests/functional/lang/eval-fail-symmetric-sub-abort-abort.err.exp
error:
       … while calling the 'sub' builtin
         at /pwd/lang/eval-fail-symmetric-sub-abort-abort.nix:1:1:
            1| builtins.sub (abort "x") (abort "y")
             | ^
            2|

       … while calling the 'abort' builtin
         at /pwd/lang/eval-fail-symmetric-sub-abort-abort.nix:1:15:
            1| builtins.sub (abort "x") (abort "y")
             |               ^
            2|

       error: evaluation aborted with the following error message: 'x'
